[project]
name = "scale-cell-transport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Lane", email = "richard.lane@bristol.ac.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "black>=25.1.0",
    "e2cnn==0.2.2",
    "einops==0.6.0",
    "imagecodecs>=2024.12.30",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mudic>=0.2.1",
    "numpy==1.26.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pylint>=3.3.6",
    "pyyaml>=6.0.2",
    "torch==1.8.1",
    "torchvision==0.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
